metadata/force-app/main/default/objects/agf__ADM_Work_Commitment__c/fields/agf__Editor__c.field-meta.xml
<CustomField>
    <fullName>agf__Editor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Editor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>