metadata/force-app/main/default/objects/agf__ADM_Work_Commitment__c/fields/agf__Item_Status__c.field-meta.xml
<CustomField>
    <fullName>agf__Item_Status__c</fullName>
    <label>Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added</fullName>
            </value>
            <value>
                <fullName>Forecasted</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>