metadata/force-app/main/default/objects/agf__ADM_Work_Commitment__c/fields/agf__Sprint__c.field-meta.xml
<CustomField>
    <fullName>agf__Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint</label>
    <referenceTo>agf__ADM_Sprint__c</referenceTo>
    <relationshipLabel>Work Forecast</relationshipLabel>
    <relationshipName>Work_Commitments</relationshipName>
    <type>Lookup</type>
</CustomField>